--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 body{
+  background-color: blue;
+  color: orange;
   text-align: center;
   font-family: "Roboto", Arial, "Helvetica Neue", Helvetica, sans-serif;
-}
-p{
-  color: orange;
 }
